# stop-the-slop

./: .envrc  .gitignore  .pre-commit-config.yaml  .sops.yaml  CHANGELOG.md  Dockerfile  README.md  devenv.nix  pyproject.toml  ruff.toml  secrets.env
.github/workflows/: cd.yml  ci.yml
plugin/borderify/: background.js  borderify.js  manifest.json
plugin/stop-the-slop/: manifest.json
src/: main.py
src/utils/: io_functions.py  my_math.py
tests/: test_my_math.py
