[project]
name = "datadrivet-template"
version = "0.2.1"
description = "Add your description here and change the repo name"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pydantic",
    "requests>=2.32.4",
    "fastapi[standard]>=0.116.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "commitizen>=3.27.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.0.1",
]
test = [
    "ruff>=0.7.4",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
